--- a/src/meson.build
+++ b/src/meson.build
@@ -1,4 +1,4 @@
-umps_srcs = files('main.c', 'ui/base.c', 'ui/dock.c', 'ui/root.c', 'ui/debug.c')
+umps_srcs = files('main.c', 'ui/base.c', 'ui/dock.c', 'ui/root.c', 'ui/debug.c', 'ui/menu.c')
 
 configure_file(input : 'config.h.in', output : 'config.h', configuration : conf_data)
 umps_config_inc = include_directories('.')
