add some scrolling code and debug stuf

--- a/meson.build
+++ b/meson.build
@@ -1,5 +1,18 @@
 project('umps', 'c')
 
+git_program = find_program('git', required : false)
+if git_program.found()
+  res = run_command(['git', 'describe', '--dirty=-dirty', '--always'], check : true, capture : true)
+
+  # trim version string down so it won't ever be too large for the UI
+  prog_version = res.stdout().strip().substring(0, 48)
+
+  message('Found version string', prog_version)
+else
+  prog_version = '???'
+  message('Git not found. Falling back to version', prog_version)
+endif
+
 conf_data = configuration_data()
 
 opt_ncurses_narrow = get_option('ncurses_narrow')
@@ -24,6 +37,9 @@ else
   conf_data.set('NCURSES_WIDE', false)
   conf_data.set('NCURSES_INCLUDE', '<ncurses.h>')
 endif
+
+conf_data.set_quoted('UMPS_VERSION', prog_version)
+conf_data.set_quoted('UMPS_NAME', 'UMPS')
 
 subdir('src')
 executable('umps', umps_srcs, dependencies : [curses_dep], include_directories : umps_config_inc,
